<resources>
    <string name="app_name">bookApps</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Disusun Oleh</string>
    <string name="slide_1_desc">Tutik Yuliatun, S.Pd</string>
    <string name="slide_2_desc">Mempelajari gempa bumi dengan keilmuan</string>
    <string name="slide_3_desc">Kenali aktivitas gempa bumi dengan aplikasi magma</string>
    <string name="slide_4_desc">Metode SETS memudahkan peserta didik untuk memahami materi tentang kegempaan</string>
    <string name="pengantar">Puji syukur senantiasa penyusun panjatkan atas kehadirat Allah SWT yang telah melimpahkan rahmad, taufiq, dan hidayah-Nya sehingga penyusun dapat menyelesaikan penyusunan E-modul IPA berbasis Science, Environment, Technology and Society (SETS) dengan tema “Pemahaman Konsep dan Kesiapsiagaan Bencana Gempa Bumi”.
        Tujuan pembuatan e-modul ini adalah untuk membantu Guru dalam menyampaikan pembelajaran pada materi Struktur Bumi dan Dinamikanya. Selanjutnya, emodul ini juga diharapkan dapat meningkatkan pemahaman konsep dan kesiapsiagaan bencana gempa bumi peserta didik.
        \n\nE-modul ini dirancang untuk pembelajaran di kelas VII SMP/MTs semester II pada lembaga pendidikan yang telah menerapkan kurikulum 2013. E-modul berbasis SETS ini dipilih untuk meningkatkan pemahaman konsep dan sikap kesiapsiagaan bencana gempa bumi peserta didik berdasar potensi bencana yang terjadi di wilayahnya.
        \n\nE-modul IPA berbasis SETS ini menuntun peserta didik untuk lebih memahami konsep terkait gempa bumi dan kesiapsiagaan bencana serta meningkatkan kesiapsiagaan peserta didik yang meliputi empat aspek; (a) pengetahuan terhadap resiko bencana; (b) sistem peringatan dini; (c) rencana untuk keadaan darurat bencana; dan (d) mobilisasi sumber daya.
        \n\nPenyusun menyadari bahwa e-modul ini jauh dari sempurna. Oleh karena itu, kritik dan saran yang bersifat membangun sangat penyusun harapkan sebagai evaluasi sehingga e-modul ini menjadi lebih baik.
    </string>
    <string name="penyusun">
        Yogyakarta, Maret 2020
        \nPenyusun
    </string>
    <string name="txtST1">
    Tujuan Pembelajaran	:
    \nMelalui kegiatan disuksi, peserta didik dapat
    \n\n1. Menjelaskan pengertian gempa bumi dengan benar
    \n2. Menjelaskan karakteristik lapisan penyusun bumi dengan benar
    \n3. Menjelaskan teori tektonik lempeng dengan benar
    \n4. Menjelaskan jenis pergerakan lempeng bumi dengan benar
    \n5. Membedakan proses terjadinya sesar dengan benar
    \n6. Menjelaskan akibat letak geografis Indonesia terhadap kerentanan bencana gempa bumi dengan benar
    </string>
    <string name="txtST1judul">
        Bacalah teks berikut dengan cermat!
        \n 27 Mei 2006
        \n Gempa Mengepung Yogyakarta
    </string>
    <string name="txtST1gambar1">
    Gambar 1. Kerusakan akibat gempa bumi 27 Mei 2006
    \n Sumber gambar: ernestwidtar.wordpress.com
    </string>
    <string name="txtST2pengembangan1">
        Ketika terjadi gempa bumi, ilmuan dapat mengetahui besarnya kekuatan/energi gempa bumi dengan suatu alat yang disebut seismograf.  Data hasil catatan seismograf dalam bentuk grafik disebut seismograf.
    </string>
    <string name="txtST2gambar22">
        Gambar 22. Seismograf dan Grafik Gelombang Seismik
        Sumber: Kusky, 2008
    </string>
    <string name="txtST2pengembangan2">
        Seismograf terdiri dari gantungan pemberat dengan pensil diujungnya. Ketika gempa bumi terjadi, pensil akan ikut bergetar dan merekam getaran yang berupa gelombang dalam sebuah kertas. Seismograf kemudian mencatat data berupa grafik gelombang gempa (gelombang seismik). Jika kalian melihat grafik pada gambar di atas, gelombang seismik yang tercatat oleh seismograf terdiri dari empat jenis gelombang, yaitu gelombang primer (gelombang p), gelombang sekunder (gelombang s), gelombang love dan gelombang rayleigh.
    </string>
    <string name="txtST2gambar27">
        Gambar 27. Perambatan gelombang seismik di dalam bumi
        \n Sumber: Ammon, 2005
    </string>
    <string name="txtST2pengembangan4">
        1. Gelombang Primer (Gelombang P)
        \n Gelombang primer merupakan gelombang yang merambat di dalam bumi yang memiliki kecepatan rambat paling cepat diantara gelombang seismik lain. Gelombang ini bisa melewati medium padat, cair, maupun gas. Gelombang primer merambat dengan menggetarkan bantuan yang ada di dalam bumi searah dengan arah getran yang dimiliki gelombang primer. Oleh karena itu, gelombang primer digolongkan dalam gelombang longitudinal, yang memeiliki arah getaran dan arah rambatan yang sama.
    </string>
    <string name="txtST2gambar28">
        Gambar 28. Gelombang Primer
        \n Sumber: cyberphysics.co.uk

    </string>
    <string name="txtST2pengembangan5">
        2. Gelombang Sekunder (Gelombang S)
	    \n Gelombang sekunder adalah salah satu gelombang yang memiliki arah getaran tegak lurus dengan arah rambatnya. Oleh karena itu, gelombang sekunder termasuk dalam gelombang transversal. Gelombang ini tidak dapat merambat pada fluida (medium cair), sehingga tidak dapat dideteksi pada inti bumi bagain luar.
    </string>
    <string name="txtST2gambar29">
        Gambar 29. Gelombang Skunder
        Sumber: cyberphysics.co.uk
    </string>
    <string name="txtST2pengembangan7">
        1. Gelombang Love
	    \n Gelombang love diperkenalkan oleh Augustus Edward Hough Love, matematikawan Inggris pada tahun 1991. Gelombang love memiliki arah getaran yang tegak lurus dengan arah rambatannya. Oleh karena itu, gelombang love merupakan gelombang transversal.
    </string>
    <string name="txtST2gambar30">
        Gambar 30. A. E. H. Love (1863-1940)
        \n Sumber: seismo.barkley.com
    </string>
    <string name="txtST2gambar31">
        Gambar 31. Gelombang Love
        \n Sumber: shakingearth.blogspot.com
    </string>
    <string name="txtST2pengembangan8">
        2. Gelombang Rayleigh
	    \n Gelombang Rayleigh diperkenalkan oleh Lord Rayleigh, fisikawan Inggris pada tahun 1815. Gerakan dari gelombang Rayleigh adalah groundroll, yaitu tanah memutar ke belakang tetapi secara gelombang memutar ke depan. Ketika terjadi gempa bumi, gelombang Rayleigh terlihat pada permukaan tanah yang bergerak ke atas dan ke bawah. Waktu perambatan gelombang Rayleigh lebih rendah daripada gelombang Love.
    </string>
    <string name="txtST2gambar33a">
        Gambar 33. Lord Rayleigh (1842-1919)
        \n Sumber: nobelprize.com

    </string>
    <string name="txtST2gambar33b">
        Gambar 33. Gelombang Rayleigh
        \n Sumber: id.wordpress.com

    </string>
    <string name="txtST2pengembangan10">
        Gelombang seismik yang pertama kali dicatat oleh seismograf adalah gelombang primer. Gelombang primer merupakan gelombang longitudinal yang merambat melalui batuan dengan merenggangkan dan merapatkan batuan yang dilaluinya. Gelombang selanjutnya yang terbaca oleh seismograf adalah gelombang sekunder. Gelombang sekunder merambat melalui batuan dengan arah getaran tegak lurus terhadap arah rambatnya, sehingga dapat menaik-turunkan batuan yang dilaluinya. Gelombang primer tercatat lebih dahulu oleh seismograf karena memiliki cepat rambat yang paling cepat diantara gelombang seismik yang lain. Beda waktu antara kedatangan gelombang primer pertama dan gelombang sekunder pertama adalah petunjuk yang penting untuk mengetahui pusat gempa. Suatu titik yang menjadi pusat gempa di dalam bumi disebut hiposenter, sedangkan titik di permukaan bumi yang merupakan refleksi tegak lurus dari hiposentrum disebut episenter.
    </string>
    <string name="txtST2gambar34">
        Gambar 34. Letak episenter dan hiposenter
        \n Sumber: ilmudasar.id
    </string>
    <string name="txtST2gambar35">
        Gambar 35. Grafik gelombang primer dan gelombang sekunder
        \n Sumber: erwinedwar,com
    </string>
    <string name="txtST2pengembangan11">
        Grafik hasil pencatatan aktivitas gelombang seismik dapat digunakan untuk menentukan episenter gempa bumi. Jika minimal ada tiga status pencatat gempa yang mencatat data, maka ilmuan dapat menentukan letak episentrum gempa bumi. Penentuan letak episentrum dilakukan dengan menggambar lingkaran, dengan status gempa menjadi pusatnya dan jarak episenter sebagai jari-jarinya. Metode tersebut dinamakan metode lingkaran. Metode lingkaran menggunakan data waktu tiba gelombang seismik dari tiga stasiun pencatat gempa.
    </string>
    <string name="txtST2pengembangan12">
Mengukur kekuatan gempa bumi dapat dilakukan secara kuantitatif maupun kualitatif. Kekuatan gempa bumi (magnitude) yang terekam dalam seismograf dinyatakan dalam skala Richter yang merupakan pendekatan kuantitatif. Skala Richter menunjukkan besarnya energi gempa bumi yang dilepaskan. Semakin tinggi magnitude suatu gempa, maka energi yang dilepaskan juga semakin besar. Dampaknya adalah kerusakan yang ditimbulkan juga semakin besar.

    </string>
    <string name="txtST2gambar36">
        Gambar 36. Penentuan episenter dengan metode lingkaran
        \n Sumber: geofisika.wordpress.com
    </string>
    <string name="txtST2pengembangan13">
Sedangkan pengukuran kekuatan gempa bumi secara kualitatif dinyatakan dengan intensitas. Intensitas gempa bergantung pada lokasi di mana seseorang merasakan getaran gempa bumi. Intensitas gempa bumi adalah besarnya gempa yang ditentukan melaluiobservasi kerusakan suatu bangunan di tempat tertentu. Berdasar tingkat kerusakan, disusunlah Skala Intensitas Modified Marcalli (MMI) yang terdiri dari XII tingkatan.
    </string>
    <string name="txtST2pengembangan14">
        Tabel 3. Perbandingan Skala MMI terhadap Skala Richter
    </string>
    <string name="txtST2gambartabel1">
        Sumber: Kusky, 2008
    </string>
    <string name="txtST3pendahuluan1">
        Bacalah teks berikut dengan cermat!
    </string>
    <string name="txtST3judulPendahuluan">
        Dampak Gempa Bumi 27 Mei 2006
    </string>
    <string name="txtST3pendahuluan2">
        Gempa yang melanda Yogyakarta 27 Mei 2006 pukul 5.54 WIB dengan magnitude 5,9 skala richter dan kedalaman 10 km. Pusat gempa berjarak 15 km di sebelah selatan kota Yogyakarta (tepatnya di Kabupaten Bantul) telah merobohkan lebih dari seratus ribu rumah, dengan data sebagai berikut
    </string>
    <string name="txtST3tabel1">
        Tabel 1. Keruskaan rumah di DIY akibat gempa bumi Bantul 2006
    </string>
    <string name="txtST3tabel2">
        Tabel 2. Jumlah Korban Meninggal
    </string>
    <string name="txtST3kutipan1">
        Dikutip dari: pelajaran dari gempa bumi Yogyakarta 27 Mei 2006, dengan perubahan
    </string>
    <string name="txtST3pendahuluan3">
        Setelah kamu membaca teks berita di atas, dapatkah kamu menganalisis apa saja dampak gempa bumi  bagi masyarakat! Tuliskan jawaban logismu dalam kotak “Aku Tahu” berikut.
    </string>
    <string name="dospem">
        Prof. Dr. Jumadi, M.Pd
    </string>
    <string name="w1">
        Untuk kelas 7
        \nSMP/MTS
    </string>
</resources>