<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".st2.St2PengembanganActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pengembangan"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardCornerRadius="70dp"
        app:cardBackgroundColor="@android:color/white"
        android:paddingBottom="32dp"
        card_view:cardElevation="6dp"
        card_view:cardPreventCornerOverlap="false"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingBottom="32dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan1"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar22" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar22"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan2"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan3"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar27" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar27"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar28" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar28"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan5"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar29" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar29"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan6"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan7"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar30" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar30"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar31" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar31"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan8"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar33a" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar33a"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar33b" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar33b"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan9"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan10"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar34" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar34"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar35" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar35"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan11"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan12"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambar36" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambar36"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan13"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2pengembangan14"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st2gambartabel1" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST2gambartabel1"/>






            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>


</LinearLayout>
