<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".st3.st3PendahuluanActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bl"/>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-40dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/or">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pendahuluan"
            android:layout_gravity="center"
            android:textColor="@color/bl"
            android:textSize="24sp"
            android:gravity="center_horizontal"/>
    </androidx.cardview.widget.CardView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingBottom="32dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST3pendahuluan1"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/txtST3judulPendahuluan"/>


                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST3pendahuluan2"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST3tabel1"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st3gambartabel1" />

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST3tabel2"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/st3gambartabel2" />

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST3kutipan1"/>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/txtST3pendahuluan3"/>



            </LinearLayout>
        </ScrollView>


</LinearLayout>
